kuard-blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"kuard-blue","namespace":"kuard"},"spec":{"ports":[{"name":"http","port":8080,"protocol":"TCP","targetPort":8080}],"selector":{"app":"kuard","version":"blue"}}}
  creationTimestamp: "2023-06-01T12:37:27Z"
  name: kuard-blue
  namespace: kuard
  resourceVersion: "4357912"
  uid: 1f7b1a2c-5b73-4198-9cf5-b211ce52ea6b
spec:
  clusterIP: 172.30.134.184
  clusterIPs:
  - 172.30.134.184
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
    version: blue
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
