kuard-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"kuard","version":"blue"},"name":"kuard-blue","namespace":"kuard"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kuard","version":"blue"}},"template":{"metadata":{"labels":{"app":"kuard","version":"blue"}},"spec":{"containers":[{"image":"gcr.io/kuar-demo/kuard-amd64:blue","name":"kuard-blue","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2023-06-13T07:12:45Z"
  generation: 6
  labels:
    app: kuard
    version: blue
  name: kuard-blue
  namespace: kuard
  resourceVersion: "12163817"
  uid: be53abb5-c330-4eb0-8a4a-50a8ab6d3611
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kuard
      version: blue
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kuard
        version: blue
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        imagePullPolicy: IfNotPresent
        name: kuard-blue
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2023-06-13T07:12:45Z"
    lastUpdateTime: "2023-06-13T07:12:47Z"
    message: ReplicaSet "kuard-blue-cf988ffd9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-06-13T09:25:05Z"
    lastUpdateTime: "2023-06-13T09:25:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 6
