kuard-purple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"ppa":"kuard","vre":"purple"},"name":"kuard-purple","namespace":"kuard"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"ppa":"kuard","vre":"purple"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"ppa":"kuard","vre":"purple"}},"spec":{"containers [...]
  creationTimestamp: "2023-06-13T07:04:07Z"
  generation: 1
  labels:
    ppa: kuard
    vre: purple
  name: kuard-purple
  namespace: kuard
  resourceVersion: "12094108"
  uid: f8435399-47b8-438b-b031-c994ef26327c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      ppa: kuard
      vre: purple
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        ppa: kuard
        vre: purple
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:purple
        imagePullPolicy: IfNotPresent
        name: kuard-purple
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-06-13T07:04:10Z"
    lastUpdateTime: "2023-06-13T07:04:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-06-13T07:04:07Z"
    lastUpdateTime: "2023-06-13T07:04:10Z"
    message: ReplicaSet "kuard-purple-f74f6c994" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
