kuard.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"kuard","namespace":"kuard"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":8080}],"selector":{"ppa":"kuard"}}}
  creationTimestamp: "2023-06-13T09:36:15Z"
  name: kuard
  namespace: kuard
  resourceVersion: "12167258"
  uid: 0e47d55c-e5ad-4791-a4cf-9dd86dc90a5e
spec:
  clusterIP: 172.30.39.130
  clusterIPs:
  - 172.30.39.130
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    ppa: kuard
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
