vs.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"kuard-vs","namespace":"kuard"},"spec":{"gateways":["kuard-gw"],"hosts":["*"],"http":[{"match":[{"uri":{"prefix":"/"}}],"route":[{"destination":{"host":"kuard","port":{"number":8080}}}]}]}}
    creationTimestamp: "2023-06-13T07:09:05Z"
    generation: 2
    name: kuard-vs
    namespace: kuard
    resourceVersion: "12097508"
    uid: d1eccc3f-80c3-44ee-8a55-5e18f2d18ad5
  spec:
    gateways:
    - kuard-gw
    hosts:
    - '*'
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: kuard
          port:
            number: 80
kind: List
metadata:
  resourceVersion: ""
